# print_soft

./: .gitignore  MotionControlAPI.h  MotionControl_Library_README.md  Project_Analysis.md  README.md  SDK集成工作完成总结.md  代码拆分工作总结.md  打印机通信协议.md  项目完成总结.md
PrintDeviceSDK/: BUILD.md  CMakeLists.txt  COMPLETION_REPORT.md  C接口vs Qt接口对比.md  INTEGRATION_GUIDE.md  PrintDeviceController.cpp  PrintDeviceController.h  PrintDeviceSDK.pro  PrintDeviceSDK_API.cpp  PrintDeviceSDK_API.h  Qt动态库实施总结.md  Qt动态库实现方案.md  Qt接口使用指南.md  README.md  SDK代码审核报告.md  SDK在Qt项目中的使用指南.md  SDK审核与使用综合报告.md  example_qt_interface.cpp  example_qt_interface.pro  代码审核报告.md  代码拆分完成说明.md  代码拆分方案.md  完整性说明.md  拆分实施总结.md  问题修复指南.md
PrintDeviceSDK/example/: example.pro  example_usage.cpp
PrintDeviceSDK/src/: SDKCallback.cpp  SDKConnection.cpp  SDKManager.cpp  SDKManager.h  SDKMotion.cpp  SDKPrint.cpp
print_soft_0_0_1/: PrintDeviceApp_SDK.pro  README.md  SDK优化建议报告.md  SDK集成完整指南.md  SDK集成说明.md  convert.ps1  motionControlSDK单例改造方案.md  运动模块通信协议.md  错误码模块实现方案.md  项目技术文档.md
print_soft_0_0_1/project/: Git_manu_print_soft.sln  manu_print_soft.sln
print_soft_0_0_1/project/motionControlSDK/: motionControlSDK.vcxproj  motionControlSDK.vcxproj.filters  motioncontrolsdk_global.h
print_soft_0_0_1/project/printDeviceMoudle/: printDeviceMoudle.vcxproj  printDeviceMoudle.vcxproj.filters  spdlog.txt
print_soft_0_0_1/res/: printDeviceMoudle.qrc
print_soft_0_0_1/src/: SerialPortWidget.cpp  SerialPortWidget.h  main.cpp  printDeviceMoudle.cpp  printDeviceMoudle.h  printDeviceMoudle.ui  thdManage.cpp  thdManage.h
print_soft_0_0_1/src -_0104_ori_副本/: main_sdk.cpp  printDeviceMoudle.ui
print_soft_0_0_1/src -_0104_ori_副本/comm/: CLogManager.h  global.cpp  utils.cpp
print_soft_0_0_1/src -_0104_ori_副本/sdk/: PrintDeviceSDK_API.cpp  SDKConnection.cpp  SDKManager.h  SDKManager_Position.cpp  SDKPackParam.cpp  SDKPrint.cpp
print_soft_0_0_1/src -_0104_ori_副本/ui/: PrintDeviceUI_SDK.h  moveDeviceUI.cpp  moveDeviceUI.h  printDeviceUI.h
print_soft_0_0_1/src/comm/: CLogManager.cpp  CLogManager.h  CLogThread.h  CSingleton - 副本.h  CSingleton.h  SpdlogMgr.cpp  SpdlogMgr.h  SpdlogQtDataFormat.h  global.h  utils.cpp  utils.h
print_soft_0_0_1/src/communicate/: SerialPortData.h
print_soft_0_0_1/src/protocol/: ProtocolMoveTmp.cpp  ProtocolPrint.cpp  ProtocolPrint.h
print_soft_0_0_1/src/sdk/: MoveAxisPos_API使用手册.md  MoveAxisPos快速集成清单.md  MoveAxisPos集成实施方案.md  PackParam信号槽传输实施方案.md  PrintDeviceSDK_API.h  QtLogger使用示例.cpp  Qt容器格式化测试.cpp  Qt容器格式化问题分析.md  Qt类型spdlog支持总结.md  Qt类型支持分析报告.md  Qt类型日志输出实现指南.md  SDKCallback.cpp  SDKConnection.cpp  SDKManager.cpp  SDKManager.h  SDKManager_Position.cpp  SDKMotion.cpp  SDKMotion_New.cpp  SDKPackParam.cpp  SDKPositionMgr.cpp  SDKPrint.cpp  SDKPrintParam.cpp  TCP字节序修复报告.md  motionControlSDK.cpp  motionControlSDK.h  motioncontrolsdk_define.h  motioncontrolsdk_global.h  代码清理实施指南.md  运动控制SDK架构分析报告.md
print_soft_0_0_1/src/service/: moveDevice.cpp  printDevice.cpp  printDevice.h
print_soft_0_0_1/src/ui/: PrintDeviceUI_SDK.cpp  PrintDeviceUI_SDK.h  printDeviceUI.cpp  printDeviceUI.h  printLogic.cpp  printLogic.h
src_copy/src - 副本/: main.cpp  main_sdk.cpp  printDeviceMoudle.cpp
src_copy/src - 副本/comm/: global.cpp  global.h  utils.h
src_copy/src - 副本/sdk/: MoveAxisPos多轴运动实现文档.md  MoveAxisPos集成总览.md  PackParam使用快速指南.md  PrintDeviceSDK_API.cpp  SDKManager.cpp  SDKMotion_New.cpp  SDKPackParam.cpp  SDK枚举使用解决方案.md  motionControlSDK.cpp  motionControlSDK.h
src_copy/src - 副本/ui/: moveDeviceUI.cpp  moveDeviceUI.h  printDeviceUI.cpp  printDeviceUI.h
src_copy/src -_0104_ori_副本/: printDeviceMoudle.cpp
src_copy/src -_0104_ori_副本/comm/: CLogManager.cpp  global.h  utils.h
src_copy/src -_0104_ori_副本/sdk/: PrintDeviceSDK_API.h  SDKCallback.cpp  SDKPrintParam.cpp  motionControlSDK.cpp  motionControlSDK.h  motioncontrolsdk_define.h
(+76 files in other folders)
